Finalize initial demo with IntersectionController and Simulation

--- a/Intelligent_traffic_lights/build.gradle
+++ b/Intelligent_traffic_lights/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 }
 
 application {
-    mainClass = 'recruitmentTask.Main'
+    mainClass = 'recruitmentTask.IntelligentTrafficLights'
 }
 
 test {
